# ChatBot

./: .gitignore  README.md  checkpoints.db  checkpoints.db-shm  checkpoints.db-wal  context_adding_node.py  creating_vectore_store.py  frontend.py  goals.txt  main.py  model.py  models.py  pyproject.toml  requirements.txt  text.ipynb  workflow.py
vectorstores/Thread_test/: index.faiss  index.pkl
